@@ -1,5 +1,14 @@
 package com.tech.techhubbackend.service;
 
+import com.fasterxml.jackson.annotation.JsonAutoDetect;
+import com.fasterxml.jackson.annotation.PropertyAccessor;
+import com.fasterxml.jackson.core.JsonProcessingException;
+import com.fasterxml.jackson.databind.JsonNode;
+import com.fasterxml.jackson.databind.ObjectMapper;
+import com.fasterxml.jackson.databind.SerializationFeature;
+import com.github.fge.jsonpatch.JsonPatch;
+import com.github.fge.jsonpatch.JsonPatchException;
+import com.tech.techhubbackend.DTO.DTOs.FavoriteEntryGetDTO;
 import com.tech.techhubbackend.DTO.DTOs.ReviewDTO;
 import com.tech.techhubbackend.DTO.DTOs.ShoppingCartEntryDTO;
 import com.tech.techhubbackend.DTO.DTOs.UserDetailsDTO;
@@ -8,22 +17,25 @@ import com.tech.techhubbackend.exceptionhandling.exceptions.*;
 import com.tech.techhubbackend.model.Image;
 import com.tech.techhubbackend.model.ShoppingCartEntry;
 import com.tech.techhubbackend.model.User;
-import com.tech.techhubbackend.repository.ProductRepository;
-import com.tech.techhubbackend.repository.ReviewRepository;
-import com.tech.techhubbackend.repository.ShoppingCartEntryRepository;
-import com.tech.techhubbackend.repository.UserRepository;
+import com.tech.techhubbackend.repository.*;
+import org.apache.tomcat.util.http.fileupload.FileUtils;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.core.io.ByteArrayResource;
+import org.springframework.core.io.FileSystemResource;
 import org.springframework.core.io.Resource;
 import org.springframework.stereotype.Service;
+import org.springframework.util.StringUtils;
+import org.springframework.web.multipart.MultipartFile;
 
 import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
+import java.nio.file.StandardCopyOption;
 import java.util.List;
 import java.util.Optional;
 import java.util.UUID;
+import java.util.stream.Collectors;
 
 @Service
 public class UserService {
@@ -32,20 +44,31 @@ public class UserService {
     private final ProductRepository productRepository;
     private final ShoppingCartEntryRepository shoppingCartEntryRepository;
     private final ReviewRepository reviewRepository;
+    private final ImageRepository imageRepository;
+    private final FavoriteEntryRepository favoriteEntryRepository;
     private final DTOMapper dtoMapper;
 
     @Autowired
-    public UserService(UserRepository userRepository, DTOMapper dtoMapper, ProductRepository productRepository, ShoppingCartEntryRepository shoppingCartEntryRepository, ReviewRepository reviewRepository) {
+    public UserService(UserRepository userRepository,
+                       DTOMapper dtoMapper,
+                       ProductRepository productRepository,
+                       ShoppingCartEntryRepository shoppingCartEntryRepository,
+                       ReviewRepository reviewRepository,
+                       FavoriteEntryRepository favoriteEntryRepository,
+                       ImageRepository imageRepository
+                       ) {
         this.userRepository = userRepository;
         this.dtoMapper = dtoMapper;
         this.productRepository = productRepository;
         this.shoppingCartEntryRepository = shoppingCartEntryRepository;
         this.reviewRepository = reviewRepository;
+        this.favoriteEntryRepository = favoriteEntryRepository;
+        this.imageRepository = imageRepository;
     }
 
     public UserDetailsDTO getUserDetails(UUID userID) {
         if(!userRepository.existsById(userID)) throw new UserNotFoundException(userID);
-        return dtoMapper.userToUserDetailsDTO(userRepository.getReferenceById(userID));
+        return new UserDetailsDTO(userRepository.getReferenceById(userID));
     }
 
     public Resource getUserPicture(UUID userID) {
@@ -60,6 +83,83 @@ public class UserService {
         } catch (IOException e) {
             throw new ImageNotFoundException();
         }
+    }
+
+    public void addUserProfilePicture(UUID userID, MultipartFile image) {
+        if(!userRepository.existsById(userID)) throw new UserNotFoundException(userID);
+        String uploadDirectory = "D:/TechHub/images/user/" + userID;
+
+        try {
+            Resource resource = new FileSystemResource(uploadDirectory);
+            if (!resource.exists() || !resource.getFile().isDirectory()) {
+                if (!resource.getFile().mkdirs())
+                    throw new InternalServerErrorException("Could not create user folder");
+            }
+
+            FileUtils.cleanDirectory(resource.getFile());
+            User user = userRepository.getReferenceById(userID);
+            if(user.getProfileImage() != null) {
+                Image tempImage = user.getProfileImage();
+                user.setProfileImage(null);
+                userRepository.save(user);
+                imageRepository.delete(tempImage);
+            }
+            if (image.isEmpty()) throw new ImageNotPresentException();
+
+            String filename = image.getOriginalFilename();
+            // Create a unique file name based on productID and provided filename
+            String uniqueFileName = generateUniqueFileName(filename, userID);
+
+            // Construct the file path where the image will be saved
+            Path filePath = Path.of(uploadDirectory, uniqueFileName);
+
+            // Save the image file to disk
+            Files.copy(image.getInputStream(), filePath, StandardCopyOption.REPLACE_EXISTING);
+
+            //create a new image entity based on the file that was just saved to disk
+            Image imageEntity = new Image();
+            imageEntity.setFilename(uniqueFileName);
+            imageEntity.setFilePath(uploadDirectory);
+            imageRepository.save(imageEntity);
+
+            user = userRepository.getReferenceById(userID);
+            user.setProfileImage(imageEntity);
+            userRepository.save(user);
+
+        } catch (IOException e) {
+            throw new InternalServerErrorException("Could not create user folder");
+        }
+    }
+
+    private String generateUniqueFileName(String filename, UUID productID) {
+        String originalFileName = StringUtils.cleanPath(filename);
+        String extension = originalFileName.substring(originalFileName.lastIndexOf("."));
+        return productID.toString() + "_" + UUID.randomUUID() + extension;
+    }
+
+    public void patchUser(UUID userID, JsonPatch patch) {
+        if(!userRepository.existsById(userID)) throw new UserNotFoundException(userID);
+        try {
+            User userPatched;
+            Optional<User> optionalUser = userRepository.findById(userID);
+            if(optionalUser.isPresent()) {
+                User u = optionalUser.get();
+                userPatched = applyPatchToUser(patch, u);
+            }
+            else throw new UserNotFoundException(userID);
+            userRepository.save(userPatched);
+        } catch (JsonPatchException | JsonProcessingException e) {
+            throw new InternalServerErrorException("Error parsing patch request." + e.getMessage());
+        }
+    }
+
+    private User applyPatchToUser(JsonPatch patch, User user) throws JsonPatchException, JsonProcessingException{
+        ObjectMapper o = new ObjectMapper();
+        o.findAndRegisterModules();
+        o.setVisibility(PropertyAccessor.FIELD, JsonAutoDetect.Visibility.ANY);
+        o.configure(SerializationFeature.FAIL_ON_EMPTY_BEANS, false);
+        JsonNode patched = patch.apply(o.convertValue(user, JsonNode.class));
+        return o.treeToValue(patched, User.class);
     }
 
     public List<ShoppingCartEntryDTO> getUserShoppingCart(UUID userID) {
@@ -126,6 +226,12 @@ public class UserService {
     public List<ReviewDTO> getUserReviews(UUID userID) {
         if(!userRepository.existsById(userID)) throw new UserNotFoundException(userID);
         User user = userRepository.getReferenceById(userID);
-        return reviewRepository.getReviewsByReviewer(user).stream().map(dtoMapper::reviewToReviewDTO).toList();
+        return reviewRepository.getReviewsByReviewer(user).stream().map(ReviewDTO::new).toList();
+    }
+
+    public List<FavoriteEntryGetDTO> getUserFavorites(UUID userID) {
+        if(!userRepository.existsById(userID)) throw new UserNotFoundException(userID);
+        User user = userRepository.getReferenceById(userID);
+        return favoriteEntryRepository.getFavoriteEntriesByUser(user).stream().map(FavoriteEntryGetDTO::new).collect(Collectors.toList());
     }
 }
